--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,22 @@
+# Local data
 /pump_house_data/
+
+# JetBrains IDE specific
+.idea/
+
+# Python virtual environment
+.venv/
+venv/
+
+# Python bytecode
+__pycache__/
+*.pyc
+
+# Build and distribution artifacts
+build/
+dist/
+*.egg-info/
+
+# Test artifacts
+.pytest_cache/
+.coverage
